Throw safe exceptions (#893)